--- a/TransLate/server/package.json
+++ b/TransLate/server/package.json
@@ -10,6 +10,7 @@
   "license": "ISC",
   "dependencies": {
     "cors": "^2.8.5",
+    "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "mongoose": "^6.7.3",
     "nodemon": "^2.0.20"
